--- a/ExploreHttp/SavedState.settings
+++ b/ExploreHttp/SavedState.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ExploreHttp" GeneratedClassName="UIState">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ExploreHttp" GeneratedClassName="SavedState">
   <Profiles />
   <Settings>
     <Setting Name="Width" Type="System.Double" Scope="User">
@@ -22,6 +22,9 @@
     </Setting>
     <Setting Name="OpenRequestIds" Type="System.Collections.Specialized.StringCollection" Scope="User">
       <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="SeparatorPosition" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">300</Value>
     </Setting>
   </Settings>
 </SettingsFile>
