Some more dialogs...

--- a/ExploreHttp/App.config
+++ b/ExploreHttp/App.config
@@ -29,6 +29,15 @@
             <setting name="SeparatorPosition" serializeAs="String">
                 <value>300</value>
             </setting>
+            <setting name="RequireValidServerCert" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="AreLogsDetailed" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="UserAgentString" serializeAs="String">
+                <value>Explore HTTP (v0.1)</value>
+            </setting>
         </ExploreHttp.SavedState>
         <ExploreHttp.UIState>
             <setting name="Width" serializeAs="String">
