some validation added

--- a/ExploreHttp/App.config
+++ b/ExploreHttp/App.config
@@ -38,6 +38,9 @@
             <setting name="UserAgentString" serializeAs="String">
                 <value>Explore HTTP (v0.1)</value>
             </setting>
+            <setting name="RequestPoolSize" serializeAs="String">
+                <value>8</value>
+            </setting>
         </ExploreHttp.SavedState>
         <ExploreHttp.UIState>
             <setting name="Width" serializeAs="String">
