added user agent handling

--- a/ExploreHttp/App.config
+++ b/ExploreHttp/App.config
@@ -36,7 +36,7 @@
                 <value>True</value>
             </setting>
             <setting name="UserAgentString" serializeAs="String">
-                <value>Explore HTTP (v0.1)</value>
+                <value>ExploreHTTP/0.1</value>
             </setting>
             <setting name="RequestPoolSize" serializeAs="String">
                 <value>8</value>
