--- a/ExploreHttp/SavedState.settings
+++ b/ExploreHttp/SavedState.settings
@@ -33,7 +33,7 @@
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="UserAgentString" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Explore HTTP (v0.1)</Value>
+      <Value Profile="(Default)">ExploreHTTP/0.1</Value>
     </Setting>
     <Setting Name="RequestPoolSize" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">8</Value>
