--- a/ExploreHttp/ExploreHttp.csproj
+++ b/ExploreHttp/ExploreHttp.csproj
@@ -78,6 +78,9 @@
     <Compile Include="HeaderCollectionControl.xaml.cs">
       <DependentUpon>HeaderCollectionControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ImportOpenApiWindow.xaml.cs">
+      <DependentUpon>ImportOpenApiWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="LogWindow.xaml.cs">
       <DependentUpon>LogWindow.xaml</DependentUpon>
     </Compile>
@@ -99,6 +102,7 @@
     <Compile Include="Services\LoggingHttpMessageHandler.cs" />
     <Compile Include="Services\ModelConverter.cs" />
     <Compile Include="Services\ObjectPool.cs" />
+    <Compile Include="Services\OpenApiImporter.cs" />
     <Compile Include="Services\PersistanceModels\EndpointCollection.cs" />
     <Compile Include="Services\PersistanceModels\Request.cs" />
     <Compile Include="Services\RequestRunner.cs" />
@@ -129,6 +133,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="HeaderCollectionControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ImportOpenApiWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -213,6 +221,9 @@
     </PackageReference>
     <PackageReference Include="DotLiquid">
       <Version>2.2.692</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.OpenApi.Readers">
+      <Version>1.6.10</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.3</Version>
